# bfsi-agents

./: .gitignore  .pre-commit-config.yaml  dev.ps1  dev.sh  docker-compose.yml  file_tree.txt  implementationplan.md  ruff.toml  test.oy  test_db.py
admin_service/: conftest.py  pyproject.toml
admin_service/alembic/: env.py
admin_service/alembic/versions/: 001_initial_schema_and_seed.py
admin_service/infra/: Dockerfile
admin_service/scripts/: create_db.py
admin_service/src/: app.py  cli.py  dependencies.py  main.py
admin_service/src/core/: config.py  exceptions.py  security.py
admin_service/src/db/: base.py  session.py
admin_service/src/models/: __init__.py  admin_models.py  external_models.py
admin_service/src/routers/: _reports_applications.py  _reports_dashboard.py  _reports_disbursements.py  _reports_performance.py  _reports_risk.py  applications.py  auth.py  config.py  internal.py  reports.py  review_queue.py
admin_service/src/schemas/: applications.py  auth.py  config.py  reports.py  review_queue.py
admin_service/tests/: conftest.py  test_auth.py  test_config.py  test_internal.py  test_reports_1.py  test_reports_2.py  test_review_queue.py
agents/decisioning_agent/: README.md  decision outputs.txt  pyproject.toml  result.json
agents/decisioning_agent/alembic/: env.py
agents/decisioning_agent/config/: bank_risk_config.yaml
agents/decisioning_agent/docs/: control_matrix.md  docker_info.md  model_inventory.md  validation_plan.md
agents/decisioning_agent/infra/: Dockerfile  dec_compose.yml  dec_docker.Dockerfile
agents/decisioning_agent/policy_docs/: unsecured_personal_loans_policy_v1.md
agents/decisioning_agent/src/: app.py  cli.py  main.py
agents/decisioning_agent/tests/: test_alert_dispatcher.py  test_audit_narrative.py  test_behavior_exposure_and_policy_metadata.py  test_counter_offer_and_bureau_calculators.py  test_decision_engine.py  test_decision_event_and_release_evidence.py  test_decline_reason_mapping.py  test_hash_utils.py  test_human_review_routing.py  test_monitoring_and_fairness.py  test_node_audit_logging.py  test_policy_and_risk_calculators.py  test_policy_retrieval_and_attribution.py  test_request_context.py  test_service_audit_repository.py  test_underwriting_human_review_service.py  test_underwriting_monitoring_service.py  test_underwriting_response_contract.py  test_underwriting_service.py  test_validation_pack.py
agents/disbursment_agent/: README.md  demo_disbursement.py  pyproject.toml
agents/disbursment_agent/alembic/: env.py
agents/disbursment_agent/src/: app.py  cli.py
agents/disbursment_agent/tests/: test_disbursement_request_contract.py  test_disbursement_transition_repository.py  test_disbursement_transitions.py  test_hash_utils.py  test_idempotency_logic.py  test_request_context.py  test_service_audit_repository.py  test_transfer_logic.py
agents/intake_agent/: .dockerignore  README.md  alembic.ini  final_results_fix.txt  final_results_fix_utf8.txt  final_results_utf8.txt  final_test_output.txt  final_test_output_utf8.txt  final_test_results.txt  pyproject.toml  pytest.ini  regression_results.txt  regression_results_utf8.txt  results_session_loop.txt  results_session_loop_utf8.txt  test_output.txt  test_output_2.txt  test_output_2_utf8.txt  test_output_3.txt  test_output_3_utf8.txt  test_output_4.txt  test_output_4_utf8.txt  test_output_5.txt  test_output_5_utf8.txt  test_output_tc_i2.txt  test_output_tc_i2_v2.txt  test_output_tc_i7.txt  test_output_utf8.txt  test_results.txt  test_results_individual.txt  test_results_utf8.txt
agents/intake_agent/alembic/: env.py
agents/intake_agent/docs/: FINAL_OUTPUT_DEMO.md
agents/intake_agent/infra/: Dockerfile  intake_docker.Dockerfile
agents/intake_agent/src/: app.py  cli.py  main.py
agents/intake_agent/tests/: conftest.py  test_application_form.py  test_callbacks_and_evidence.py  test_document_upload_idempotency.py  test_idempotency.py  test_integration_pipeline.py  test_metadata_parser.py  test_reason_codes.py  test_typed_field_validators.py  test_validation_persistence.py
agents/intake_agent/z_test_scripts/: client.py  conftest.py  dl_upload_test_output.json  improper_app_id_invalid_test_output.json  large_file_test_output.json  py_large_file.py  ssn_upload_test_output.json  test_SSN_document_upload.py  test_db_down.py  test_dl_document.py  test_drivers_license_upload.py  test_get_loan_details_HIL.py  test_human_review_submit.py  test_large_file_invalid_mime.py  test_large_file_upload.py  test_large_file_valid_mime.py  test_missing_application_id.py  test_sql_injection.py  test_ssn_card_upload.py  test_with_improper_app_id.py  test_without_appid.py  without_app_id_invalid_test_output.json
agents/kyc_agent/: README.md  check_redis.py  package-lock.json  pyproject.toml  verify_idempotency_basic.py
agents/kyc_agent/alembic/: env.py
agents/kyc_agent/docs/: Table_details_kyc.md  app-flow.md  backend-schema.md  docker_info.md  front-end-guidelines.md  implementation-plan.md  kyd-domain.md  prd.md  stories.md  tech-stack.md
agents/kyc_agent/infra/: .dockerignore  Dockerfile  docker-compose.yml
agents/kyc_agent/src/: app.py  cli.py
agents/kyc_agent/test_payloads/: kyc_trigger.md
agents/kyc_agent/tests/: conftest.py  test_address_verification.py  test_boundaries.py  test_contact_verification.py  test_hash_utils.py  test_idempotency.py  test_idempotency_repository.py  test_identity.py  test_kyc_flow.py  test_kyc_idempotency.py  test_kyc_trigger.py  verify_face_liveness.py  verify_realtime_liveness.py
orchestrator/: pyproject.toml
orchestrator/shared/: __init__.py  data_mappers.py  pipeline_events.py
orchestrator/src/: __init__.py  cli.py  config.py  main.py
orchestrator/src/api/: routes.py
orchestrator/src/models/: __init__.py  pipeline.py
orchestrator/src/services/: pipeline_service.py
orchestrator/src/store/: __init__.py  database.py  (+2 more)
orchestrator/tests/: test_e2e_pipeline.py  test_offer_generator.py  test_pipeline_service.py
tools/reviewing_agent/: pyproject.toml  runner.py
vault/agent_services/: __init__.py  pyproject.toml
(+616 files in other folders)
