[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = "Admin/Lender portal microservice — JWT auth, human review queue, config management, reporting"
authors = ["Agentic Platform Team"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
bcrypt = "^4.0"
fastapi = "^0.110.0"
httpx = "^0.27.0"
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.9"
sqlalchemy = { version = "^2.0.46", extras = ["asyncio"] }
uvicorn = { version = "^0.29.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23"
ruff = "^0.3.0"

[tool.poetry.scripts]
dev = "src.cli:dev"
prod = "src.cli:prod"
migrate = "src.cli:migrate"
setup = "src.cli:setup"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
