[tool.poetry]
name = "intake-agent"
version = "0.1.0"
description = "intake_agent microservice"
authors = ["Agentic Platform Team"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
alembic = "^1.18.3"
asyncpg = "^0.31.0"
boto3 = "^1.42.42"
dynamsoft-barcode-reader-bundle = "^11.4.1000"
fastapi = "^0.110.0"
langgraph = "^0.0.40"
numpy = "^2.4.2"
ollama = "^0.6.1"
opencv-python = "^4.13.0.90"
pdf2image = "^1.17.0"
phonenumbers = "^9.0.23"
pillow = "^12.1.0"
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"
pydantic = "^2.6.0"
pydantic-settings = "^2.12.0"
python-multipart = "^0.0.22"
redis = "^7.1.1"
slowapi = "^0.1.9"
sqlacodegen = "^3.2.0"
sqlalchemy = "^2.0.46"
timm = "^1.0.24"
tokenizers = "^0.22.2"
ua-parser = "^0.18.0"
uvicorn = "^0.29.0"
hvac = "^2.4.0"

[tool.poetry.scripts]
dev = "src.cli:dev"
prod = "src.cli:prod"
test = "src.cli:test"
migration = "src.cli:migration"
migrate = "src.cli:migrate"
initial_migration = "src.cli:migrate"
migrate_new_model = "src.cli:migrate_new_model"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23"
python-dotenv = "^1.2.1"
ruff = "^0.3.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"