[tool.poetry]
name = "kyc-agent"
version = "0.1.0"
description = "kyc_agent microservice"
authors = ["Agentic Platform Team"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
fastapi = "^0.110.0"
graphviz = "^0.21"
langchain = "^1.2.10"
langgraph = "^1.0.9"
langsmith = {extras = ["otel"], version = "^0.7.6"}
opentelemetry-api = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-sdk = "^1.39.1"
phonenumbers = "^9.0.24"
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
redis = "^7.1.1"
slowapi = "^0.1.9"
sqlacodegen = "^3.2.0"
sqlalchemy = "^2.0.46"
uvicorn = "^0.29.0"
deepface = "^0.0.93"
opencv-python-headless = "^4.11.0.86"
tensorflow = "^2.20.0"
tf-keras = "^2.20.1"


[tool.poetry.scripts]
dev = "src.cli:dev"
prod = "src.cli:prod"
test = "src.cli:test"
migration = "src.cli:migration"
initial_migration = "src.cli:migrate"
down_grade = "src.cli:downgrade"
lint = "src.cli:lint"

[tool.poetry.group.dev.dependencies]
fakeredis = "^2.33.0"
httpx = "^0.28.1"
pre-commit = "^4.5.1"
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.2"
hypothesis = "^6.151.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["alembic"]

# Move these here to stop the warning
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = ["B008"] # To allow FastAPI Depends()

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
