[project]
name = "vault-service"
version = "0.1.0"
description = ""
authors = [
    {name = "SricharanReddy129",email = "sricharanreddy129@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "hvac (>=2.4.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.42.48,<2.0.0)",
    "botocore (>=1.42.48,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
